tests/semantic_errors/sasha95_4.tl
-- test case 95.
-- Description : condition with wrong types. Condition cannot be a string

-- Expected : '4'
require "ifj21" 
function write_numbers(counter : string)
   while counter do                
        write(counter, "
")           
    end                                  
end                                      

